<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screenDetailMeal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    android:orientation="vertical"
    tools:context=".presentation.ui.DetailMealActivity">

    <LinearLayout
        style="@style/header_generic_linearlayout_withbackbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/buttonGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_effect_ripple"
            app:srcCompat="@drawable/ic_go_back" />

        <TextView
            android:id="@+id/textView12"
            style="@style/text_generic_bold_size18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="99"
            android:text="@string/meal"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_radius_superior_linearlayout"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_24"
        android:paddingTop="@dimen/padding_32"
        android:paddingEnd="@dimen/padding_24"
        android:paddingBottom="@dimen/padding_32">

        <TextView
            android:id="@+id/nameMeal"
            style="@style/label_generic_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meal"
            android:textColor="@color/gray_1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/descriptionMeal"
            style="@style/label_generic_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/generic_text"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/textView20"
            style="@style/label_generic_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generic_text_date_hour"
            android:textColor="@color/gray_1" />

        <TextView
            android:id="@+id/dateMeal"
            style="@style/label_generic_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_24"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/generic_date"
            android:textSize="@dimen/font_size_16" />

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray_rectangle_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_8">

                <androidx.cardview.widget.CardView
                    android:id="@+id/tagShapeCircle"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/gray_1"
                    app:cardCornerRadius="999dp">

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tagDiet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:fontFamily="@font/nunito_sans"
                    android:gravity="center_horizontal"
                    android:text="@string/tag_in_diet"
                    android:textColor="@color/gray_1" />

            </LinearLayout>
        </FrameLayout>

        <View android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="99"
            />

        <Button
            android:id="@+id/buttonEditMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_button_default"
            android:drawableStart="@drawable/ic_edit"
            android:drawablePadding="-100dp"
            android:gravity="center"
            android:paddingStart="120dp"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/button_edit_meal"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/buttonRemoveMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_button_variant"
            android:drawableStart="@drawable/ic_delete"
            android:drawablePadding="-100dp"
            android:gravity="center"
            android:paddingStart="120dp"
            android:text="@string/button_remove_meal"
            android:textColor="@color/gray_2"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>