<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_5"
    android:orientation="vertical"
    tools:context=".presentation.ui.NewMealActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/header_generic_linearlayout_withbackbutton">

        <ImageView
            android:id="@+id/screenNewMealIconGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_effect_ripple"
            app:srcCompat="@drawable/ic_go_back"
            app:tint="@color/gray_2" />

        <TextView
            android:id="@+id/titleHeader"
            style="@style/text_generic_bold_size18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="99"
            android:text="@string/new_meal"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_radius_superior_linearlayout"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_24"
        android:paddingTop="@dimen/padding_32"
        android:paddingEnd="@dimen/padding_24"
        android:paddingBottom="@dimen/padding_32">

        <TextView
            android:id="@+id/textView5"
            style="@style/label_generic_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/inputName"
            style="@style/input_generic_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView10"
            style="@style/label_generic_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/inputDescription"
            style="@style/input_generic_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:importantForAccessibility="no"
            android:inputType="textMultiLine"
            android:minLines="5" />

        <TextView
            android:id="@+id/textView11"
            style="@style/label_generic_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_about_diet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/frameButtonYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/shape_gray_rectangle"
                android:clickable="true"
                android:paddingTop="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_16">

                <androidx.cardview.widget.CardView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:backgroundTint="@color/green_dark"
                    app:cardCornerRadius="999dp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/yes"
                    android:textColor="@color/gray_1"
                    android:textSize="@dimen/font_size_14" />

            </FrameLayout>

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <FrameLayout
                android:id="@+id/frameButtonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/shape_gray_rectangle"
                android:clickable="true"
                android:paddingTop="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_16">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/no"
                    android:textColor="@color/gray_1"
                    android:textSize="@dimen/font_size_14" />

                <androidx.cardview.widget.CardView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:backgroundTint="@color/red_dark"
                    app:cardCornerRadius="999dp" />
            </FrameLayout>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="90" />

        <Button
            android:id="@+id/buttonRegisterMeal"
            style="@style/button_generic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/ripple_button_default"
            android:text="@string/button_register_meal" />

    </LinearLayout>
</LinearLayout>