<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screenLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    android:orientation="vertical"
    tools:context=".presentation.ui.StatisticsActivity">

    <ImageView
        android:id="@+id/iconGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="45dp"
        android:background="@drawable/selector_effect_ripple"
        app:srcCompat="@drawable/ic_go_back"
        app:tint="@color/green_dark" />

    <TextView
        android:id="@+id/textLargePercent"
        style="@style/large_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generic_percent" />

    <TextView
        android:id="@+id/textView8"
        style="@style/complement_text_large_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/percent_meals_in_diet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_32"
        android:background="@drawable/shape_radius_superior_linearlayout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_24"
            android:paddingTop="@dimen/padding_32"
            android:paddingEnd="@dimen/padding_24"
            android:paddingBottom="@dimen/padding_32">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/statistic_general"
                android:textAlignment="center"
                android:textColor="@color/gray_1"
                android:textSize="@dimen/font_size_14" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray_6"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mealsRegistered"
                        style="@style/text_large_register_number_meal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/generic_register" />

                    <TextView
                        android:id="@+id/textView14"
                        style="@style/register_text_complement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/meals_registered" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:divider="@drawable/shape_gap_linearlayouthorizontal"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:showDividers="middle"

                >

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/green_light"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_16">

                        <TextView
                            android:id="@+id/percentMealsInDiet"
                            style="@style/text_large_register_number_meal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/generic_register" />

                        <TextView
                            android:id="@+id/textView16"
                            style="@style/register_text_complement"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/meals_in_diet" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/red_light"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_16">

                        <TextView
                            android:id="@+id/percentMealsOutDiet"
                            style="@style/text_large_register_number_meal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/generic_register" />

                        <TextView
                            android:id="@+id/textView18"
                            style="@style/register_text_complement"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/meals_out_diet" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>